--- a/pages/refactor.scss
+++ b/pages/refactor.scss
@@ -1,3 +1,16 @@
+@import '../scss/style.scss';
+
 .background-app {
      background-image: url(/static/hero-pattern.svg);
+}
+
+.radius:after {
+    content: "";
+    display: block;
+    width: 110%;
+    margin-left: -5%;
+    padding-bottom: 3%;
+    background: url(/static/radius.svg) center bottom / cover no-repeat;
+    background-repeat: no-repeat;
+    background-position: center bottom;
 }
